--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -64,14 +64,14 @@
 </header>
 
 <main>
-    <div id="main-content" class="container">
+    <div id="main-content" class="container center">
         <h1 class="flow-text">欢迎使用 灯杆广告机管理后台</h1>
     </div>
     <div class="background container center hide-on-med-and-down">
-        <img src="../../../static/application/image/WechatIMG20.jpeg" width="90%"/>
+        <img src="../../../static/application/image/desk-bg.jpg" width="90%"/>
     </div>
     <div class="background container center hide-on-large-only">
-        <img src="../../../static/application/image/WechatIMG21.jpeg" width="90%"/>
+        <img src="../../../static/application/image/tab-mob-bg.jpg" width="90%"/>
     </div>
 </main>
 
