--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineList.html
@@ -77,30 +77,27 @@
                         <div class="collapsible-header"><i class="material-icons">search</i>条件搜索</div>
                         <div class="collapsible-body">
                             <div class="row">
-                                <div class="col s12 m8 l8 center">
-                                    <div class="row">
-                                        <div class="input-field col s12 m4 l4">
-                                            <input id="name" name="name" type="text"/>
-                                            <label for="name">待查广告机名称</label>
-                                        </div>
-                                        <div class="input-field col s12 m4 l4">
-                                            <input id="codeNumber" name="codeNumber" type="text"/>
-                                            <label for="codeNumber">待查广告机识别码</label>
-                                        </div>
-                                        <div class="input-field col s12 m4 l4">
-                                            <input id="addTime" name="addTime" type="text" class="date-picker"/>
-                                            <label for="addTime">时间查询</label>
-                                        </div>
+                                <div class="col s12 m10 l10 center">
+                                    <div class="input-field col s12 m4 l4">
+                                        <input id="name" name="name" type="text"/>
+                                        <label for="name">按广告机名称</label>
+                                    </div>
+                                    <div class="input-field col s12 m4 l4">
+                                        <input id="codeNumber" name="codeNumber" type="text"/>
+                                        <label for="codeNumber">按广告机识别码</label>
+                                    </div>
+                                    <div class="input-field col s12 m4 l4">
+                                        <input id="addTime" name="addTime" type="text" class="date-picker"
+                                               placeholder="选择日期"/>
+                                        <label for="addTime">按加入时间</label>
                                     </div>
                                 </div>
-                                <div class="col s12 m4 l4 center">
-                                    <div class="row">
-                                        <div class="input-field col s12 m12 l12">
-                                            <button type="submit"
-                                                    class="btn-floating btn-large waves-effect waves-light green">
-                                                <i class="material-icons">search</i>
-                                            </button>
-                                        </div>
+                                <div class="col s12 m2 l2 center">
+                                    <div class="input-field col s12 m12 l12">
+                                        <button type="submit"
+                                                class="btn-floating btn-large waves-effect waves-light green">
+                                            <i class="material-icons">search</i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -205,8 +202,6 @@
                     <h6>机器识别码</h6>
                     <p>codeNumber</p>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col s12 m12 l12">
                     <h6>地址</h6>
                     <p>address</p>
