--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -1,11 +1,263 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>角色列表</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
+    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
+    <title>用户 - 广告机管理后台</title>
 </head>
 <body>
+<header>
+    <nav style="background-color: #37474f;z-index: 1;">
+        <div class="nav-wrapper">
+            <!--/* <editor-fold desc="responsive navigation"> */-->
+            <ul class="left">
+                <li style="height: 56px;">
+                    <a href="#" data-activates="nav-mobile" id="button-nav-menu" class="hide-on-large-only">
+                        <i class="material-icons">menu</i>
+                    </a>
+                </li>
+            </ul>
+            <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
+                <li class="logo">
+                    <a id="logo-container" href="#" class="brand-logo">
+                        <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="../system/main.html" class="waves-effect waves-teal">首页</a>
+                </li>
+                <li>
+                    <a href="../advertisementMachine/advertisementMachineList.html"
+                       class="waves-effect waves-teal">广告机</a>
+                </li>
+                <li>
+                    <a href="../advertisement/advertisementList.html" class="waves-effect waves-teal">广告</a>
+                </li>
+                <li>
+                    <a href="../user/userList.html" class="waves-effect waves-teal">用户</a>
+                </li>
+                <li class="active">
+                    <a href="#" class="waves-effect waves-teal">角色 - 需要角色判断来显示</a>
+                </li>
+            </ul>
+            <!--/* </editor-fold> */-->
+            <!--/* <editor-fold desc="right navbar item"> */-->
+            <ul class="right">
+                <li>username，欢迎</li>
+                <li>
+                    <a class="dropdown-button" href="#" data-activates="dropdown-menu">
+                        <i class="material-icons right">account_circle</i>
+                    </a>
+                </li>
+            </ul>
+            <ul id="dropdown-menu" class="dropdown-content">
+                <li><a href="#" class="black-text">退出</a></li>
+            </ul>
+            <!--/* </editor-fold> */-->
+        </div>
+    </nav>
+</header>
 
+<main>
+    <div id="main-content" class="container">
+        <h5 class="title">用户列表</h5>
+        <ul>
+            <li class="divider"></li>
+        </ul>
+
+        <!--/* <editor-fold desc="search box"> */-->
+        <div id="search-box">
+            <form action="#" method="post">
+                <ul class="collapsible popout" data-collapsible="accordion">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">search</i>条件搜索</div>
+                        <div class="collapsible-body">
+                            <div class="row">
+                                <div class="col s12 m10 l10 center">
+                                    <div class="input-field col s6 m3 l3">
+                                        <input id="username" name="username" type="text" placeholder="输入用户名"/>
+                                        <label for="username">按用户名</label>
+                                    </div>
+                                    <div class="input-field col s6 m3 l3">
+                                        <input id="authname" name="authname" type="text" placeholder="输入登录账号"/>
+                                        <label for="authname">按登录名</label>
+                                    </div>
+                                    <div class="input-field col s6 m3 l3">
+                                        <input id="addTime" name="addTime" type="text" class="date-picker"
+                                               placeholder="选择日期"/>
+                                        <label for="addTime">按加入时间</label>
+                                    </div>
+                                    <div class="input-field col s6 m3 l3">
+                                        <select id="roleID" name="roleID">
+                                            <option value="" disabled="disabled" selected="selected">选择角色</option>
+                                            <option value="1">角色1</option>
+                                            <option value="2">角色2</option>
+                                        </select>
+                                        <label for="roleID">按角色</label>
+                                    </div>
+                                </div>
+                                <div class="col s12 m2 l2 center">
+                                    <div class="input-field">
+                                        <button type="submit"
+                                                class="btn-floating btn-large waves-effect waves-light green">
+                                            <i class="material-icons">search</i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </form>
+        </div>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="table main content"> */-->
+        <table class="highlight responsive-table">
+            <thead>
+            <tr>
+                <th>用户名</th>
+                <th>登录名</th>
+                <th>联系方式</th>
+                <th>角色</th>
+                <th>地址</th>
+                <th class="hide-on-med-and-down"></th>
+                <th class="hide-on-large-only"></th>
+            </tr>
+            </thead>
+            <tbody class="card">
+            <tr>
+                <td>username</td>
+                <td>authname</td>
+                <td>phone</td>
+                <td>roleID -> role.name</td>
+                <td>address</td>
+                <td width="15%" class="right-align hide-on-med-and-down">
+                    <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                        <i class="material-icons">more_horiz</i>
+                    </a>
+                    <a class="btn-floating green waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="删除">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
+                <td class="hide-on-large-only" id="mobile-table-item-buttons">
+                    <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                        <i class="material-icons">more_horiz</i>
+                    </a>
+                    <br/>
+                    <a class="btn-floating green waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="删除">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="add button"> */-->
+        <div id="fixed-add-btn" class="fixed-action-btn">
+            <a class="btn-floating btn-large waves-effect waves-light blue" href="userForm.html">
+                <i class="large material-icons">add</i>
+            </a>
+        </div>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="pagination"> */-->
+        <div class="center">
+            <ul class="pagination">
+                <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
+                <li class="waves-effect" id="active-page"><a href="#">1</a></li>
+                <li class="waves-effect"><a href="#">2</a></li>
+                <li class="waves-effect"><a href="#">3</a></li>
+                <li class="waves-effect"><a href="#">4</a></li>
+                <li class="waves-effect"><a href="#">5</a></li>
+                <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
+        </div>
+        <!--/* </editor-fold> */-->
+    </div>
+
+    <!-- <editor-fold desc="Modal"> -->
+    <div id="detail-modal" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4>详情</h4>
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <h6>用户编号</h6>
+                    <p>id</p>
+                    <h6>用户名</h6>
+                    <p>username</p>
+                    <h6>登录名</h6>
+                    <p>authname</p>
+                </div>
+                <div class="col s12 m6 l6">
+                    <h6>联系电话</h6>
+                    <p>phone</p>
+                    <h6>加入时间</h6>
+                    <p>addTime</p>
+                    <h6>角色</h6>
+                    <p>roleID -> role.name</p>
+                </div>
+
+                <div class="col s12 m12 l12">
+                    <h6>地址</h6>
+                    <p>address</p>
+                    <h6>备注</h6>
+                    <p>remark</p>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+        </div>
+    </div>
+    <!-- </editor-fold> -->
+</main>
+
+<footer class="page-footer hide-on-med-and-down"
+        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+    <div class="footer-copyright">
+        <div class="container right-align">
+            © 2017 Copyright 珠海希梦电子科技有限公司
+        </div>
+    </div>
+</footer>
+
+<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/date-picker.js"></script>
+<script type="text/javascript" src="../../../static/application/js/global.js"></script>
+<script type="text/javascript">
+    $(function () {
+        resize_footer(window.screen.width);
+        $('#button-nav-menu').sideNav({
+            closeOnClick: true,
+            draggable: true
+        });
+        $('.dropdown-button').dropdown();
+        $('.date-picker').pickadatee({
+            closeOnSelect: true
+        });
+        $("#detail-modal").modal();
+        $("#roleID").material_select();
+    });
+</script>
 </body>
 </html>
