--- a/src/main/webapp/WEB-INF/templates/user/userList.html
+++ b/src/main/webapp/WEB-INF/templates/user/userList.html
@@ -126,7 +126,7 @@
                 <th>联系方式</th>
                 <th>角色</th>
                 <th>地址</th>
-                <th class="hide-on-med-and-down"></th>
+                <th width="15%" class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
             </tr>
             </thead>
@@ -137,13 +137,13 @@
                 <td>phone</td>
                 <td>roleID -> role.name</td>
                 <td>address</td>
-                <td width="15%" class="right-align hide-on-med-and-down">
+                <td class="right-align hide-on-med-and-down">
                     <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
                        data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="userForm.html">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
@@ -158,7 +158,7 @@
                     </a>
                     <br/>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="userForm.html">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
