--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../static/application/css/global.css"/>
     <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
-    <title>用户 - 广告机管理后台</title>
+    <title>角色 - 广告机管理后台</title>
 </head>
 <body>
 <header>
@@ -65,7 +65,7 @@
 
 <main>
     <div id="main-content" class="container">
-        <h5 class="title">用户列表</h5>
+        <h5 class="title">角色列表</h5>
         <ul>
             <li class="divider"></li>
         </ul>
@@ -79,26 +79,9 @@
                         <div class="collapsible-body">
                             <div class="row">
                                 <div class="col s12 m10 l10 center">
-                                    <div class="input-field col s6 m3 l3">
-                                        <input id="username" name="username" type="text" placeholder="输入用户名"/>
-                                        <label for="username">按用户名</label>
-                                    </div>
-                                    <div class="input-field col s6 m3 l3">
-                                        <input id="authname" name="authname" type="text" placeholder="输入登录账号"/>
-                                        <label for="authname">按登录名</label>
-                                    </div>
-                                    <div class="input-field col s6 m3 l3">
-                                        <input id="addTime" name="addTime" type="text" class="date-picker"
-                                               placeholder="选择日期"/>
-                                        <label for="addTime">按加入时间</label>
-                                    </div>
-                                    <div class="input-field col s6 m3 l3">
-                                        <select id="roleID" name="roleID">
-                                            <option value="" disabled="disabled" selected="selected">选择角色</option>
-                                            <option value="1">角色1</option>
-                                            <option value="2">角色2</option>
-                                        </select>
-                                        <label for="roleID">按角色</label>
+                                    <div class="input-field">
+                                        <input id="username" name="username" type="text" placeholder="输入角色名称"/>
+                                        <label for="username">按角色名称</label>
                                     </div>
                                 </div>
                                 <div class="col s12 m2 l2 center">
@@ -121,29 +104,23 @@
         <table class="highlight responsive-table">
             <thead>
             <tr>
-                <th>用户名</th>
-                <th>登录名</th>
-                <th>联系方式</th>
-                <th>角色</th>
-                <th>地址</th>
-                <th class="hide-on-med-and-down"></th>
+                <th width="20%">角色名</th>
+                <th>备注</th>
+                <th width="15%" class="hide-on-med-and-down"></th>
                 <th class="hide-on-large-only"></th>
             </tr>
             </thead>
             <tbody class="card">
             <tr>
-                <td>username</td>
-                <td>authname</td>
-                <td>phone</td>
-                <td>roleID -> role.name</td>
-                <td>address</td>
-                <td width="15%" class="right-align hide-on-med-and-down">
+                <td>name</td>
+                <td>remark</td>
+                <td class="right-align hide-on-med-and-down">
                     <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
                        data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="roleForm.html">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
@@ -158,7 +135,7 @@
                     </a>
                     <br/>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="roleForm.html">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
@@ -173,7 +150,7 @@
 
         <!--/* <editor-fold desc="add button"> */-->
         <div id="fixed-add-btn" class="fixed-action-btn">
-            <a class="btn-floating btn-large waves-effect waves-light blue" href="userForm.html">
+            <a class="btn-floating btn-large waves-effect waves-light blue" href="roleForm.html">
                 <i class="large material-icons">add</i>
             </a>
         </div>
@@ -200,25 +177,15 @@
             <h4>详情</h4>
             <div class="row">
                 <div class="col s12 m6 l6">
-                    <h6>用户编号</h6>
+                    <h6>角色编号</h6>
                     <p>id</p>
-                    <h6>用户名</h6>
-                    <p>username</p>
-                    <h6>登录名</h6>
-                    <p>authname</p>
                 </div>
                 <div class="col s12 m6 l6">
-                    <h6>联系电话</h6>
-                    <p>phone</p>
-                    <h6>加入时间</h6>
-                    <p>addTime</p>
-                    <h6>角色</h6>
-                    <p>roleID -> role.name</p>
+                    <h6>角色名</h6>
+                    <p>username</p>
                 </div>
 
                 <div class="col s12 m12 l12">
-                    <h6>地址</h6>
-                    <p>address</p>
                     <h6>备注</h6>
                     <p>remark</p>
                 </div>
