try to figure out HTTPS login and login interceptor

--- a/src/main/webapp/static/application/css/global.css
+++ b/src/main/webapp/static/application/css/global.css
@@ -119,3 +119,8 @@ ul.side-nav.fixed li.logo img {
     margin-top: 2px;
     margin-right: 2px;
 }
+
+.nav-logo-img {
+    margin: 8px;
+    height: 48px;
+}
