--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
-    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
-    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
+    <link rel="stylesheet" th:href="@{/static/application/css/global.css}"/>
+    <link rel="stylesheet" th:href="@{/static/materialize/css/materialize.min.css}"/>
+    <link rel="shoutcut icon" type="image/x-icon" href="/favicon.ico" media="all"/>
     <title>登录 - 广告机管理后台</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     </div>
     <div class="nav-wrapper container">
         <a href="#" itemprop="url" class="brand-logo">
-            [logo_here]
+            <img src="../../../static/application/image/logo.png" class="nav-logo-img"/>
         </a>
     </div>
 </nav>
@@ -29,35 +29,35 @@
                 <span class="card-title center-align">广告机管理后台 登录</span>
             </div>
             <div class="card-action">
-                <!-- <editor-fold desc="login input elements"> -->
-                <div class="row">
-                    <div class="input-field col s12 m12 l12"
-                         style="margin-top: 10px;margin-bottom: 0;padding-top: 0; padding-bottom: 0;">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input id="authname" type="text" class="validate white-text center" required="required"/>
-                        <label for="authname" class="grey-text">登录账号</label>
+                <form th:action="@{/login}" method="post">
+                    <!-- <editor-fold desc="login input elements"> -->
+                    <div class="row">
+                        <div class="input-field col s12 m12 l12"
+                             style="margin-top: 10px;margin-bottom: 0;padding-top: 0; padding-bottom: 0;">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input id="authname" name="authname" type="text" class="validate white-text" required="required"/>
+                            <label for="authname" class="grey-text">登录账号</label>
+                        </div>
+                        <div class="input-field col s12 m12 l12"
+                             style="margin-top: 0;margin-bottom: 10px;padding-top: 0; padding-bottom: 0;">
+                            <i class="material-icons prefix">security</i>
+                            <input id="password" name="password" type="password" class="validate white-text" required="required"/>
+                            <label for="password" class="grey-text">登录密码</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12 m12 l12"
-                         style="margin-top: 0;margin-bottom: 10px;padding-top: 0; padding-bottom: 0;">
-                        <i class="material-icons prefix">security</i>
-                        <input id="password" type="password" class="validate white-text center" required="required"/>
-                        <label for="password" class="grey-text">登录密码</label>
+                    <!-- </editor-fold> -->
+                    <!-- <editor-fold desc="action buttons"> -->
+                    <div class="row">
+                        <div class="col s3 m3 l3"></div>
+                        <div class="col s6 m6 l6">
+                            <button class="btn waves-effect waves-light" type="submit" name="action">登录
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                        <div class="col s2 m2 l2"></div>
                     </div>
-                </div>
-                <!-- </editor-fold> -->
-                <!-- <editor-fold desc="action buttons"> -->
-                <div class="row">
-                    <div class="col s3 m3 l3"></div>
-                    <div class="col s6 m6 l6">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">登录
-                            <i class="material-icons right">send</i>
-                        </button>
-                    </div>
-                    <div class="col s2 m2 l2"></div>
-                </div>
-                <!-- </editor-fold> -->
+                    <!-- </editor-fold> -->
+                </form>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
             "height": 40 + 'px',
             "padding": 0
         });
-    })
+    });
 </script>
 </body>
 </html>
