--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -10,6 +10,8 @@
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>编辑广告机 - 广告机管理后台</title>
 </head>
+<!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+<!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <body>
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
@@ -24,30 +26,30 @@
             </ul>
             <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
                 <li class="logo">
-                    <a id="logo-container" href="#" class="brand-logo">
+                    <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
                         <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
                     </a>
                 </li>
                 <li>
-                    <a href="../system/main.html" class="waves-effect waves-teal">首页</a>
+                    <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
                 </li>
                 <li class="active">
-                    <a href="#" class="waves-effect waves-teal">广告机</a>
+                    <a th:href="@{${adminPath}+'/advertisementMachine/list'}" class="waves-effect waves-teal">广告机</a>
                 </li>
                 <li>
-                    <a href="../advertisement/advertisementList.html" class="waves-effect waves-teal">广告</a>
+                    <a th:href="@{${adminPath}+'/advertisement/list'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li>
-                    <a href="../user/userList.html" class="waves-effect waves-teal">用户</a>
+                <li th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/user/list'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li>
-                    <a href="../role/roleList.html" class="waves-effect waves-teal">角色 - 需要角色判断来显示</a>
+                <li th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/role/list'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
             <!--/* </editor-fold> */-->
             <!--/* <editor-fold desc="right navbar item"> */-->
             <ul class="right">
-                <li>username，欢迎</li>
+                <li th:text="|${loginUser.username}, 欢迎|"></li>
                 <li>
                     <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
@@ -55,67 +57,73 @@
                 </li>
             </ul>
             <ul id="dropdown-menu" class="dropdown-content">
-                <li><a href="#" class="black-text">退出</a></li>
+                <li><a th:href="@{${adminPath}+'/logout'}" class="black-text">退出</a></li>
             </ul>
             <!--/* </editor-fold> */-->
         </div>
     </nav>
 </header>
-
+<!--/*@thymesVar id="advertisementMachine" type="com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine"*/-->
 <main>
     <div id="main-content" class="container">
         <h5 class="title">
             <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a>&nbsp;|&nbsp;编辑广告机——名称
+               onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a>
+            <span th:text="'&nbsp;|&nbsp;编辑广告机——'+${advertisementMachine.id==-2?'新增广告机':advertisementMachine.name}"></span>
         </h5>
         <ul>
             <li class="divider"></li>
         </ul>
 
-        <form action="#" method="post">
-            <!--/* <editor-fold desc="hidden fields"> */-->
-            <input id="id" name="id" type="hidden" disabled="disabled" class="validate" required="required"/>
-            <input id="longitude" name="longitude" type="hidden" disabled="disabled" class="validate"/>
-            <input id="latitude" name="latitude" type="hidden" disabled="disabled" class="validate"/>
-            <!--/* </editor-fold> */-->
-
+        <form th:action="@{${adminPath}+'/advertisementMachine/save'}" method="post">
+            <input id="id" name="id" type="hidden" disabled="disabled" class="validate" required="required"
+                   th:value="${advertisementMachine.id}"/>
+            <input id="longitude" name="longitude" type="hidden" disabled="disabled" class="validate"
+                   th:value="${advertisementMachine.longitude}"/>
+            <input id="latitude" name="latitude" type="hidden" disabled="disabled" class="validate"
+                   th:value="${advertisementMachine.latitude}"/>
             <div class="row">
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">create</i>
-                    <input id="name" name="name" type="text" class="validate" placeholder="输入名称" required="required"/>
+                    <input id="name" name="name" type="text" class="validate" placeholder="输入名称" required="required"
+                           th:value="${advertisementMachine.name}"/>
                     <label for="name">广告机名称</label>
                 </div>
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">account_circle</i>
                     <select id="userID" name="userID">
                         <option value="" disabled="disabled" selected="selected">选择用户</option>
-                        <option value="1">用户1</option>
-                        <option value="2">用户2</option>
-                        <option value="3">用户3</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
                     </select>
                     <label for="userID">所属用户</label>
                 </div>
 
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">place</i>
-                    <input id="address" name="address" type="text" class="validate" placeholder="输入地址"/>
+                    <input id="address" name="address" type="text" class="validate" placeholder="输入地址"
+                           th:value="${advertisementMachine.address}"/>
                     <label for="address">广告机地址</label>
                 </div>
 
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">date_range</i>
-                    <input id="addTime" name="addTime" type="text" class="date-picker" placeholder="选择加入时间"/>
+                    <input id="addTime" name="addTime" type="text" class="date-picker" placeholder="选择加入时间"
+                           th:value="${advertisementMachine.addTime}"/>
                     <label for="addTime">加入时间</label>
                 </div>
                 <div class="input-field col s6 m6 l6">
                     <i class="material-icons prefix">code</i>
-                    <input id="codeNumber" name="codeNumber" type="text" class="validate" placeholder=""/>
+                    <input id="codeNumber" name="codeNumber" type="text" readonly="readonly" class="validate"
+                           placeholder="" th:value="${advertisementMachine.codeNumber}"/>
                     <label for="codeNumber">机器识别码</label>
                 </div>
 
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
-                    <textarea id="remark" name="remark" class="materialize-textarea" placeholder=""></textarea>
+                    <textarea id="remark" name="remark" class="materialize-textarea" placeholder=""
+                              th:value="${advertisementMachine.remark}"></textarea>
                     <label for="remark">备注</label>
                 </div>
             </div>
